# SupervisorPlusAgents

./: .gitignore  =0.1.0  README.md  cli.py  config.json  plan.md  project_tree.txt  pyproject.toml  pytest.ini  requirements.txt  test.ps1
.claude/: settings.local.json
Archive/: README_LangChain.md  README_LangGraph.md  Supervisor_Implementation_startingPrompt.txt  claude_notes.md  claude_notes_241025_14.38.md
docs/: Plan_for_Re-Authoring_GenAI_Components.md  claude_modes_cheatsheet.md  claude_notes.md  implementation_status.md  plan.md  project_background.md  securing-mcp-tools-with-azure-ad-on-behalf-of-obo.md  stage2_overview.md  supervisor_design.md  supervisor_test_plan.md  user_stories.md
genai_supervisor/: __init__.py  supervisor.py
logs/: cli_module_restructure.md  phase2_stubs_results.md  phase2_summary.txt  phase3_router_results.md  phase3_summary.txt  phase4_handlers_results.md  phase5_supervisor_results.md  phase6_integration_results.md  phase7_cli_results.md  stage2_phase1_doc_tool_results.md  stage2_phase2_db_tool_results.md  stage2_phase3_llm_router_results.md  stage2_phase4_claude_api_results.md  stage2_phase4_env_load_results.md  stage2_phase5_langchain_agent_results.md  stage2_phase5_modifier_live_claude_results.md  stage2_requirements_validation.md
supervisor/: __init__.py  agent.py  cli.py  config.py  handlers.py  langchain_agent.py  llm_router.py  router.py
tests/: __init__.py  conftest.py  test_agent_openai_interface.py  test_claude_live_response.py  test_cli.py  test_config.py  test_env_loading.py  test_handlers.py  test_integration.py  (+5 more)
(+20 files in other folders)
